2010-09-16  John W. Eaton  <jwe@octave.org>

	* configure.ac (SCRIPTS_EXE_SUFFIX) Delete variable and all uses.
	(BUILD_COMPILED_AUX_PROGRAMS): New variable.
	(AMCOND_BUILD_COMPILED_AUX_PROGRAMS): New Automake conditional.
	* Makefile.am (SCRIPTS_EXE_SUFFIX, BUILT_SHELL_FILES): Delete
	variables and all uses.
	(bin_SCRIPTS, bin_PROGRAMS, mkoctfile_SOURCES,
	nodist_mkoctfile_SOURCES, octave_config_SOURCES,
	nodist_octave_config_SOURCES, octave_bug_SOURCES,
	nodist_octave_bug_SOURCES, BUILT_SOURCES): Define conditionally
	based on AMCOND_BUILD_COMPILED_AUX_PROGRAMS.
	(noinst_SCRIPTS): New variable.
	(CLEANFILES): Include $(bin_PROGRAMS) $(bin_SCRIPTS)
	$(BUILT_SOURCES) in the list.
	(all-local): Also depend on $(bin_PROGRAMS) and $(noinst_SCRIPTS).
	(octave-bug.cc, octave-config.cc, mkoctfile.cc, octave-bug)
	(octave-config, mkoctfile): Make rules conditional on
	AMCOND_BUILD_COMPILED_AUX_PROGRAMS.
	(make-version-links, remove-version-links): Define different
	rules conditional on AMCOND_BUILD_COMPILED_AUX_PROGRAMS.

2010-09-13  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-09-10  Jaroslav Hajek  <highegg@gmail.com>

	* m4/ax_blas_f77_func.m4: Update.

2010-09-07  Ben Abbott  <bpabbott@mac.com>

	* acinclude.m4, configure.ac, m4/module.mk: Update acx_*.m4
	macros to the newer ax_*.m4 versions.
	* ax_blas.m4, ax_lapack.m4, ax_blas_f77_func.m4,
	ax_pthread.m4: Add files.
	* acx_blas.m4, acx_lapack.m4, acx_blas_f77_func.m4,
	acx_pthread.m4: Remove files.

2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-08-21  Rik <octave@nomad.inbox5.com>

	* NEWS: Add randi to list of new functions

2010-08-09  John Swensen <jpswensen@gmail.com>

	* mkoctfile.in: Add ability to pass -pthread through to linker.

2010-08-13  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-08-09  Rik <octave@nomad.inbox5.com>

	* examples/Makefile.am: Don't echo 'echo' command when building
	octave.desktop.

2010-08-09  Jaroslav Hajek  <highegg@gmail.com>
